add doc and clean controllers
